prow/cluster/resources/gatekeeper-constraints/workloads/allowPrivilegeEscalation.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowPrivilegeEscalationContainer
metadata:
  name: psp-allow-privilege-escalation-container
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
  parameters:
    exemptImages:
      - europe-docker.pkg.dev/kyma-project/prod/k8s-prow/entrypoint:*
      - europe-docker.pkg.dev/kyma-project/prod/k8s-prow/initupload:*
      - europe-docker.pkg.dev/kyma-project/prod/k8s-prow/clonerefs:*
      - europe-docker.pkg.dev/kyma-project/prod/k8s-prow/sidecar:*
      - "aquasec/trivy:*"
      - "eu.gcr.io/sap-kyma-neighbors-dev/image-builder:*"
      - "europe-docker.pkg.dev/kyma-project/prod/testimages/e2e-dind-k3d:*"
      - "europe-docker.pkg.dev/kyma-project/prod/testimages/e2e-dind-nodejs:*"
      - "europe-docker.pkg.dev/kyma-project/prod/test-infra/prow-tools:*"
