prow/cluster/resources/gatekeeper-constraints/workloads/allowedImages.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedImages
metadata:
  name: allow-only-kyma-trusted-repos
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    namespaces:
      - "default"
    images:
      - "docker.io/aquasec/trivy"
      - "docker.io/zricethezav/gitleaks"
      - "docker.io/maven"
      - "gcr.io/k8s-prow/checkconfig"
      - "gcr.io/k8s-prow/generic-autobumper"
      - "gcr.io/k8s-prow/label_sync"
      - "gcr.io/k8s-prow/branchprotector"
      - "gcr.io/k8s-prow/commenter"
      - "gcr.io/k8s-prow/gencred"
      - "eu.gcr.io/kyma-project"
      - "europe-docker.pkg.dev/kyma-project"
      - "europe-west3-docker.pkg.dev/sap-kyma-neighbors-dev"
      - "eu.gcr.io/sap-kyma-neighbors-dev"
#      - "gcr.io"
#      - "eu.gcr.io"
#      - "us.gcr.io"
#      - "asia.gcr.io"
#      - "docker.wdf.sap.corp"
#      - "int.repositories.cloud.sap"
