prow/cluster/resources/gatekeeper-constraints/workloads/allowedImagesProwProwjobsNamespace.yaml
# Allow only images needed to run prowjobs.

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedImages
metadata:
  name: prow-prowjobs-namespace
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
  parameters:
    images:
      - "docker.io/aquasec/trivy"
      - "docker.io/zricethezav/gitleaks"
      - "docker.io/maven"
      - "gcr.io/k8s-prow/gencred"
      - "eu.gcr.io/kyma-project"
      - "eu.gcr.io/sap-kyma-neighbors-dev"
      - "europe-docker.pkg.dev/kyma-project"
      - "europe-west3-docker.pkg.dev/sap-kyma-neighbors-dev"
      - "europe-docker.pkg.dev/gcr-cleaner/gcr-cleaner/gcr-cleaner-cli"
