prow/cluster/resources/gatekeeper-constraints/workloads/allowedImagesProwToolsNamespaces.yaml
# Allow images needed to run supporting tools in Prow workload clusters.

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedImages
metadata:
  name: prow-tools-namespaces
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "external-secrets"
      - "gatekeeper-system"
  parameters:
    images:
      - "ghcr.io/external-secrets/external-secrets"
      - "openpolicyagent/gatekeeper"
      - "eu.gcr.io/kyma-project"
      - "eu.gcr.io/sap-kyma-neighbors-dev"
      - "europe-docker.pkg.dev/kyma-project"
      - "europe-west3-docker.pkg.dev/sap-kyma-neighbors-dev"
