prow/cluster/resources/gatekeeper-constraints/workloads/allowedRepos.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: allow-only-kyma-trusted-repos
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    repos:
      - "europe-docker.pkg.dev/kyma-project"
      - "europe-west3-docker.pkg.dev/sap-kyma-neighbors-dev"
      - "gcr.io"
      - "eu.gcr.io"
      - "us.gcr.io"
      - "asia.gcr.io"
      - "docker.wdf.sap.corp"
      - "int.repositories.cloud.sap"
