prow/cluster/resources/gatekeeper-constraints/workloads/apparmor.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAppArmor
metadata:
  name: psp-apparmor
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
  parameters:
    allowedProfiles:
      - runtime/default
    exemptImages:
      - europe-docker.pkg.dev/kyma-project/prod/image-builder:*
