prow/cluster/resources/gatekeeper-constraints/workloads/hostFilesystem.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostFilesystem
metadata:
  name: psp-host-filesystem
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
  parameters:
    allowedHostPaths:
      - pathPrefix: "/lib/modules"
      - pathPrefix: "/sys/fs/cgroup"
