prow/cluster/resources/gatekeeper-constraints/workloads/seccomp.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPSeccomp
metadata:
  name: psp-seccomp
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
  parameters:
    allowedProfiles:
      - runtime/default
      - docker/default
    exemptImages:
      - "europe-docker.pkg.dev/kyma-project/prod/k8s-prow/entrypoint:*"
      - "europe-docker.pkg.dev/kyma-project/prod/k8s-prow/initupload:*"
      - "europe-docker.pkg.dev/kyma-project/prod/k8s-prow/clonerefs:*"
      - "europe-docker.pkg.dev/kyma-project/prod/k8s-prow/sidecar:*"
      - "aquasec/trivy:*"
      - "eu.gcr.io/kyma-project/prow/cleaner:*"
      - "eu.gcr.io/kyma-project/test-infra/bootstrap:*"
      - "eu.gcr.io/kyma-project/test-infra/buildpack-golang:*"
      - "eu.gcr.io/kyma-project/test-infra/gardener-rotate:*"
      - "eu.gcr.io/kyma-project/test-infra/golangci-lint:*"
      - "eu.gcr.io/kyma-project/test-infra/kyma-integration:*"
      - "eu.gcr.io/sap-kyma-neighbors-dev/image-builder:*"
      - "europe-docker.pkg.dev/kyma-project/prod/image-builder:*"
      - "europe-docker.pkg.dev/kyma-project/prod/buildkit-image-builder:*"
      - "europe-docker.pkg.dev/kyma-project/prod/testimages/e2e-dind-k3d:*"
      - "europe-docker.pkg.dev/kyma-project/prod/testimages/e2e-dind-nodejs:*"
      - "europe-docker.pkg.dev/kyma-project/prod/test-infra/prow-tools:*"
      - "europe-docker.pkg.dev/kyma-project/prod/k8s-prow/generic-autobumper:*"
      - "europe-docker.pkg.dev/kyma-project/prod/k8s-prow/ghproxy:*"
      - "europe-docker.pkg.dev/kyma-project/prod/testimages/e2e-gcloud:*"
